--- a/package.json
+++ b/package.json
@@ -15,9 +15,16 @@
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@reduxjs/toolkit": "^2.0.1",
+    "i18next": "^23.7.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.1",
+    "react-i18next": "^14.0.0",
+    "react-redux": "^9.1.0",
+    "react-router-dom": "^6.21.2",
+    "redux": "^5.0.1",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^3.1.0",
     "router": "^1.3.8"
   },
   "devDependencies": {
