--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@react-pdf/renderer": "^3.3.8",
     "@reduxjs/toolkit": "^2.0.1",
     "i18next": "^23.7.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^14.0.0",
+    "react-pdf": "^7.7.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.2",
     "redux-thunk": "^3.1.0",
